  .----------------------.
--|   X-Chat ChangeLog   |--------------------------------------------
  `----------------------'

----------------------------------------------------------------------
 x.y.z
----------------------------------------------------------------------

 - 3 python patches (not yet in).
 - python amd64 suse configure.in patch (Mads Martin Joergensen).
 - ricky's history patch (Ricky Clarkson).
 - fixed missing dcc flag on new ignores via gui.
 - print plugin name on "xxx called without a valid context" messages.
 - add needed 5 spaces to ignore footer text event.
 - FALSE on gdk_colormap_alloc_color sharable arg in xtext.c.


----------------------------------------------------------------------
 2.0.5
----------------------------------------------------------------------

 - Updated translations (ca, fi, lt, nl, sk, sv, zh_CN).
 - Fixed detection of Python 2.3 in configure script (anonymous).
 - DCC Send file-selection dialog now supports multi-select.
 - Reset away status after auto-reconnect from a ping timeout.
 - Perl: Fixed IRC::user_info always matching the first entry.
 - More C89 fixes for non-gcc compilers (Albert Chin). [781809].
 - xtext: now double buffered and flicker free. Also some efficiency
   tweaks for exposure events and multi-wrapped lines.
 - Removed buggy numeric 338 support [783945].
 - Nick completion in dialogs and channel completion (Jay Cornwall).
 - Print informative error messages when dcc resume isn't possible.
 - Fixed performance of dcc recv, send and chat windows.
 - Fixed tab-arrow buttons show/hide (Lloyd Williams) [783681].
 - Fixed lastlog bugs [791220].
 - win32: Faster tinting, and uses MMX when in 16 or 32bit color.
 - Execute /sigusr2 on receiving SIGUSR2 signal (Michael Guidero).
 - /IGNORE command and window now have an extra "DCC" category.
 - Alert user when logfiles fail to open (Jay Cornwall).
 - Fixed missing underlining of IP numbers (2.0.4 only).